--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "node --watch server.js"
+    "dev": "node --watch server.js",
+    "migrate:sea": "node scripts/apply-sea-migration.js"
   },
   "dependencies": {
     "express": "^4.18.2",
