Move backend to separate private repository
- Backend is now in private repo: git@github.com:TheXmyst/sea-dogs-backend.git
- Removed backend/ from this repository
- Added backend/ to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@ dist-ssr
 .env.development
 backend/.env
 
+# Backend is now in a separate private repository
+backend/
+
 # Build outputs
 build
 out
