--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
   "framework": "vite",
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/((?!music|captains|.*\\.(mp3|mp4|jpg|jpeg|png|gif|svg|webp|ico|woff|woff2|ttf|eot|css|js|json)).*)",
       "destination": "/index.html"
     }
   ],
