--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
   "framework": "vite",
   "rewrites": [
     {
-      "source": "/((?!.*\\.(mp3|mp4|jpg|jpeg|png|gif|svg|webp|ico|woff|woff2|ttf|eot|css|js|json|xml|txt|pdf|zip|webm|ogg|wav)).*)",
+      "source": "/((?!.*\\.(mp3|mp4|jpg|jpeg|png|gif|svg|webp|ico|woff|woff2|ttf|eot|css|js|json|xml|txt|pdf|zip|webm|ogg|wav|map)).*)",
       "destination": "/index.html"
     }
   ],
