--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test": "node test/gameState.test.js"
   },
   "dependencies": {
+    "gsap": "^3.13.0",
+    "pixi.js": "^8.14.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -19,4 +21,3 @@
     "vite": "^5.0.0"
   }
 }
-
